2006-01-04  Bas van der Vlies <basv@sara.nl>:

	* Fixed getopt for -f option
	* Added suppport for different TRAC versions (0.8 and 0.9)

2006-01-03  Michel Jouvin  <jouvin@lal.in2p3.fr>

	* email2trac.py (ReadConfig) : allow project name relative to project root in configuration file
	
	* email2trac.py (TicketEmailParser.parse): save entire email for debugging only if debug >= 2

	* run_email2trac.c: pass wrapper arguments to Python script, filtering out --file 

	* email2trac.py (TicketEmailParser.debug_attachments): set tmp file created for debugging writable by anybody (to avoid problem if the script is run with a different uid during tests)

	* email2trac.py (TicketEmailParser.parse): set tmp file created for debugging writable by anybody (to avoid problem if the script is run with a different uid during tests)

2005-12-22  Michel Jouvin  <jouvin@lal.in2p3.fr>

	* Makefile: add a Makefile to build and install email2trac

	* email2trac.py: migrate to Trac 0.9 API

2005-12-21  Michel Jouvin  <jouvin@lal.in2p3.fr>

	* run_email2trac.c: add error messages if DEBUG macro defined

	* run_email2trac.c: add error testing and specific return values for each error

	* run_email2trac.c: Move site specific paramaters to run_email2trac.h

	* run_email2trac.h: include file to define site specific paramaters

0.2.4 01/11/2005
	Added email_header option if set then show TO/CC fields in
	description of the ticket.

	Fixed an error in the mailto URL. This was an old error that 
	supposed to be fixed but reoccured in this version.
	
0.2.3 31/10/2005
	Fixed a bug with base64 encoded attachments/emails
	Fixed by: Walter de Jong

0.2.2 10/10/2005
	according to RFC 2368 (titled "the mailto URL scheme") the mailto
	URL can only work with short &body messages. It fails with long
	messages and the link won't work. Therefore the mail body is
	no longer copied into the mail reply.

0.2.1 10/07/2005
	body of reply email looks better


0.2   10/07/2005