@@ -9,3 +9,7 @@ umask: 022
 email_comment: >
 email_header: 1
 trac_version: 0.9
+
+[bas]
+project: /data/trac/bas
+spam_level: 1
